--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header>
+<app-header></app-header>
 
 
-</app-header>
 <div class="container">
-  <app-home></app-home>
+  
   <router-outlet></router-outlet>
 </div>
 
