--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,19 @@
 <h1>Seja bem vindo ao curso de Angular!</h1>
 <a></a>
 <div class="row">
-  <div class="col">
-    <img class="img-fluid" src ="../../../assets/logo_horacio.png">
+<div class="card-fluid" style="width: 18rem;">
+  <img [src] = "aprovado" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Voce foi aprovado.</p>
   </div>
-  <div class="col">
-      <img class="img-fluid" src="../../../assets/crud.png">
-  </div>
+  <div class="card-fluid" style="width: 18rem;">
+    <img [src] = "namedia" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Voce foi aprovado.</p>
+    </div>
+    <div class="card-fluid" style="width: 18rem;">
+      <img [src] = "reprovado" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Voce foi aprovado.</p>
+      </div>
 </div>
-
