--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="nav fixed-bottom navbar-light bg-light justify-content-center">
   <span class="navbar-text">
-    Rafael/Gustavo <strong>@CursoAngular</strong>
+    Gustavo <strong>@ProjetoAngular</strong>
   </span>
 </div>
