--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 
+<div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+  <h1>Alunos do segundo semestre de 2023 </h1></div>
 
-<h1>Alunos do segundo semestre de 2023 </h1>
 
 <div class="row">
 <div class="col-md-4">
